# journal-data-api

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
src/journal_api/: __init__.py  __main__.py  api_server.py  cache.py  config.py  http_client.py  main.py  mcp_server.py  models.py  resolver.py
src/journal_api/sources/: base.py  crossref.py  google_scholar.py  openalex.py  publisher_proxy.py  scihub.py  semantic_scholar.py  unpaywall.py
src/journal_api/utils/: doi.py  pdf.py  rate_limiter.py  user_agents.py
tests/: test_doi.py  test_integration.py  test_models.py  test_pdf.py
