[project]
name = "journal-data-api"
version = "0.1.0"
description = "Academic article access API with multi-source fallback"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx[http2,socks]>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "diskcache>=5.6.0",
    "PyMuPDF>=1.25.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/journal_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require network access",
]
